--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">my_location</i></h2>
-            <h5 class="center">Remove the DIGITAL NOMAD lifestyle drain
+            <h5 class="center">Moving Made Simple
 </h5>
 
             <p class="light">Live-anywhere plans your next (and the next) DIGITAL NOMAD destination without the drain of "the next move"</p>
