--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
         <div class="row center">
-          <h5 class="header col s12 light">Real time one click digital nomad wayfaring.</h5>
+          <h5 class="header col s12 light">Real-Time One-Click Digital Wayfaring.</h5>
         </div>
         <div class="row center">
           <a href="#signup" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Pricing</a>
