--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
         <div class="row center">
-          <h5 class="header col s12 light">Real-Time One-Click Digital Wayfaring.</h5>
+          <h4 class="header col s12 light">You Work Anywhere, Now Live-Anywhere</h4>
         </div>
         <div class="row center">
           <a href="#signup" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Pricing</a>
@@ -70,29 +70,29 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">my_location</i></h2>
-            <h5 class="center">Moving Made Simple
+            <h5 class="center">One-Click Digital Nomad Wayfaring
 </h5>
 
-            <p class="light">Live-anywhere plans your next (and the next) DIGITAL NOMAD destination without the drain of "the next move"</p>
+            <p class="light">Coordination of destinations in real-time.  Live-anywhere removes the cognitive load and mental drain of your "next move" (and the next...)</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">insert_chart</i></h2>
-            <h5 class="center">Logistical DIGITAL NOMAD concierge</h5>
+            <h5 class="center">Your Digital Nomad Concierge</h5>
 
 
-            <p class="light">Logistical DIGITAL NOMAD concierge</p>
+            <p class="light">Moving logistics?  Co-working space?  Car storage?  E-mail scanning?  Reliable public wifi?  We have you covered.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">vpn_key</i></h2>
-            <h5 class="center">Unlock the Romantic DIGITAL NOMAD Lifestyle</h5>
+            <h5 class="center">Slow Travel, The Nomad Way</h5>
 
-            <p class="light">Pre-Bundled adventures will rekindle the romance of exotic worldwide wayfaring in the digital age</p>
+            <p class="light">Engage the local community over a longer-term horizon.  See the sites, but stay focused on your craft, or your business or your clients.</p>
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Built for the traveling nomad seeking adventure.</h5>
+          <h5 class="header col s12 light">Let the world become your home</h5>
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Let the world become your home.</h5>
+          <h5 class="header col s12 light">Where will you end up next?</h5>
         </div>
       </div>
     </div>
@@ -165,8 +165,7 @@
 
           <p class="left-align light">Here at Live Anywhere we pride ourselves on freedom.
             The freedom to choose where you want to live, and how long you want to live there.
-            Never worry about a lease contract full of legal jargon again,
-            and only worry about whether you want to live in a bustling city, or a peaceful suburb.</p>
+            Never worry about a lease contract full of legal jargon again.</p>
         </div>
       </div>
 
