--- a/index.html
+++ b/index.html
@@ -35,9 +35,20 @@
 
      gtag('config', 'UA-107698072-1');
    </script>
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NTB5Z4V');</script>
+<!-- End Google Tag Manager -->
 </head>
 
 <body>
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTB5Z4V"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
    <nav class="navbar navbar-expand-md fixed-top">
       <a class="navbar-brand" href="#">
@@ -223,7 +234,17 @@
     </div>
   </div>
 </div>
+<script>
 
+window.dataLayer = window.dataLayer || [];
+window.dataLayer.push({
+'event' : 'signUpFormSuccess',
+'formId' : 'mc-embedded-subscribe-form',
+'eventCategory' : 'Subscriptions',
+'eventAction' : 'Pop-up form success',
+'eventLabel' : location.pathname
+});
+</script>
    <!-- Bootstrap core JavaScript
     ================================================== -->
    <!-- Placed at the end of the document so the pages load faster -->
