adding links to social media icons

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                <p class="footer-contact">   <i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:5732569991">573-256-9991</a>
                </p>
                <ul class="list-unstyled list-inline">
-                  <li class="list-inline-item"><a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-                  <li class="list-inline-item"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                  <li class="list-inline-item"><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                  <li class="list-inline-item"><a href="https://www.facebook.com/liveanywhere.co/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                  <li class="list-inline-item"><a href="https://twitter.com/live_anywhere17" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                  <li class="list-inline-item"><a href="https://www.instagram.com/liveanywhere.co/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                </ul>
             </div>
             <div class="col mb-3">
