adding links to blog

--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                   <h3 class="mb-4">Our Credo</h3>
                   <p>Here at Live Anywhere we pride ourselves on freedom. The freedom to choose where you want to live, and how long you want to live there. Never worry about a lease contract full of legal jargon again.</p>
+                  <p>Follow our blog.</p>
+                  <a href="http://blog.live-anywhere.co" class="btn btn-outline-primary" target="_blank">Read <i class="fa fa-rss" aria-hidden="true"></i></a>
+
                </div>
             </div>
          </div>
@@ -194,6 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   Company Bio
                </h3>
                <p>We are a random group of strangers brought together through Columbia Start Up Weekend with one goal in mind: solve a current problem. If you're interested in this idea or would like to get more involved, feel free to reach out to us!</p>
+               <p>Read our <a href="http://blog.live-anywhere.co" target="_blank">blog <i class="fa fa-rss" aria-hidden="true"></i></a></p>
             </div>
 
          </div>
