--- a/index.html
+++ b/index.html
@@ -249,6 +249,32 @@ window.dataLayer.push({
 'eventLabel' : location.pathname
 });
 </script>
+
+<script>
+// Gets a reference to the form element, assuming
+// it contains the id attribute "signup-form".
+var form = document.getElementById('mc-embedded-subscribe-form');
+
+// Adds a listener for the "submit" event.
+form.addEventListener('submit', function(event) {
+
+// Prevents the browser from submitting the form
+// and thus unloading the current page.
+event.preventDefault();
+
+// Sends the event to Google Analytics and
+// resubmits the form once the hit is done.
+ga('send', 'event', 'Signup Form', 'submit', {
+hitCallback: function() {
+   form.submit();
+}
+});
+});
+
+</script>
+
+
+
    <!-- Bootstrap core JavaScript
     ================================================== -->
    <!-- Placed at the end of the document so the pages load faster -->
