tracking test for ga

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h1>Work Remotely. Build Communities. Live Anywhere.</h1>
             <p class="lead">
                Let the world become your home<br>
-               <button type="button" class="btn btn-outline-primary mt-3" data-toggle="modal" data-target="#exampleModal">
+               <button type="button" onclick="ga(send', 'event', 'Signup Form', 'submit');" class="btn btn-outline-primary mt-3" data-toggle="modal" data-target="#exampleModal">
                  Live Anywhere
                </button>
             </p>
