minor text updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="description" content="Work Remotely. Build Communities. Live Anywhere. Let the world become your home">
+   <meta name="description" content="Work Remotely. Build Communities. Live Anywhere. Let the world become your home. Exchange your monthly lease, mortgage, airbnb budget for a monthly living subscription that has your back.">
    <meta name="author" content="Live Anywhere">
    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </section>
       <section class="card-features ">
          <h2 class="text-center mb-3">Your Digital Nomad Concierge</h2>
-         <p class="text-center mb-5">Moving logistics? Co-working space? Car storage? E-mail scanning? Reliable public wifi? We have you covered.</p>
+         <p class="text-center mb-5">Moving logistics? Co-working space? Reliable wifi? We have you covered. Exchange your monthly lease, mortgage, airbnb budget for a monthly living subscription that has your back.</p>
          <div class="container-fluid">
             <div class="row mb-4 card-deck">
 
