content sytle updates

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </section>
       <section class="card-features ">
          <h2 class="text-center mb-3">Your Digital Nomad Concierge</h2>
-         <p class="text-center mb-5">Moving logistics? Co-working space? Reliable wifi? We have you covered. Exchange your monthly lease, mortgage, airbnb budget for a monthly living subscription that has your back.</p>
+         <div class="row justify-content-md-center">
+             <div class="col-md-auto main-body-text">
+               <p class="text-center mb-5">Moving logistics? Co-working space? Reliable wifi? We have you covered. Exchange your monthly lease, mortgage, airbnb budget for a monthly living subscription that has your back.</p>
+            </div>
+         </div>
          <div class="container-fluid">
             <div class="row mb-4 card-deck">
 
